[gd_scene load_steps=19 format=2]

[ext_resource path="res://levels/tutorial/tutorial.gd" type="Script" id=1]
[ext_resource path="res://assets/levels/tiles/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://entities/actors/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/actors/npc/prisoner/prisoner.png" type="Texture" id=4]
[ext_resource path="res://assets/actors/npc/prisoner/prisoner-bones.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/spectre-varaints/label-8pt.tres" type="DynamicFont" id=6]
[ext_resource path="res://entities/props/door.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/gui/speech/prisoner-speech.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/hungry-variants/8-pt.tres" type="DynamicFont" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 6.10778

[sub_resource type="CircleShape2D" id=2]
radius = 5.4244

[sub_resource type="CircleShape2D" id=3]
radius = 5.39656

[sub_resource type="CircleShape2D" id=4]
radius = 5.22462

[sub_resource type="CircleShape2D" id=5]
radius = 5.50583

[sub_resource type="CircleShape2D" id=6]
radius = 5.36998

[sub_resource type="RichTextEffect" id=7]

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[node name="tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 21, 0, 2, 21, 0, 3, 21, 0, 4, 21, 0, 5, 21, 0, 6, 28, 0, 7, 1, 0, 8, 29, 0, 9, 21, 0, 10, 21, 0, 11, 21, 0, 12, 21, 0, 13, 21, 0, 14, 10, 0, 65536, 4, 0, 65537, 14, 0, 65538, 14, 0, 65539, 31, 0, 65540, 14, 0, 65541, 14, 0, 65542, 31, 0, 65543, 0, 0, 65544, 14, 0, 65545, 31, 0, 65546, 14, 0, 65547, 14, 0, 65548, 31, 0, 65549, 14, 0, 65550, 6, 0, 131072, 4, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 6, 0, 196608, 4, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 6, 0, 262144, 4, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 6, 0, 327680, 4, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 6, 0, 393216, 4, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 6, 0, 458752, 4, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 6, 0, 524288, 4, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 6, 0, 589824, 8, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 11, 0 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 80 )

[node name="viewport" type="Viewport" parent="."]
size = Vector2( 240, 160 )

[node name="prisoners" type="Node2D" parent="."]

[node name="prisoner" type="Sprite" parent="prisoners"]
position = Vector2( 20, 80 )
texture = ExtResource( 4 )

[node name="staticBody" type="StaticBody2D" parent="prisoners/prisoner"]

[node name="collider" type="CollisionShape2D" parent="prisoners/prisoner/staticBody"]
shape = SubResource( 1 )

[node name="bones-1" type="Sprite" parent="prisoners"]
position = Vector2( 20, 50 )
texture = ExtResource( 5 )

[node name="staticBody" type="StaticBody2D" parent="prisoners/bones-1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="prisoners/bones-1/staticBody"]
shape = SubResource( 2 )

[node name="bones-2" type="Sprite" parent="prisoners"]
position = Vector2( 20, 110 )
texture = ExtResource( 5 )

[node name="staticBody" type="StaticBody2D" parent="prisoners/bones-2"]

[node name="collider" type="CollisionShape2D" parent="prisoners/bones-2/staticBody"]
shape = SubResource( 3 )

[node name="bones-3" type="Sprite" parent="prisoners"]
position = Vector2( 220, 50 )
texture = ExtResource( 5 )
flip_h = true

[node name="staticBody" type="StaticBody2D" parent="prisoners/bones-3"]

[node name="collider" type="CollisionShape2D" parent="prisoners/bones-3/staticBody"]
shape = SubResource( 4 )

[node name="bones-4" type="Sprite" parent="prisoners"]
position = Vector2( 220, 80 )
texture = ExtResource( 5 )
flip_h = true

[node name="staticBody" type="StaticBody2D" parent="prisoners/bones-4"]

[node name="collider" type="CollisionShape2D" parent="prisoners/bones-4/staticBody"]
shape = SubResource( 5 )

[node name="bones-5" type="Sprite" parent="prisoners"]
position = Vector2( 220, 110 )
texture = ExtResource( 5 )
flip_h = true

[node name="staticBody" type="StaticBody2D" parent="prisoners/bones-5"]

[node name="collider" type="CollisionShape2D" parent="prisoners/bones-5/staticBody"]
shape = SubResource( 6 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="tween" type="Tween" parent="."]

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prisonerSpeechBubble" type="TextureRect" parent="ui"]
visible = false
modulate = Color( 1, 1, 1, 0.74902 )
margin_left = 30.0
margin_top = 45.8067
margin_right = 126.0
margin_bottom = 77.8067
texture = ExtResource( 8 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prisonerSpeech" type="RichTextLabel" parent="ui/prisonerSpeechBubble"]
margin_left = 2.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/italics_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 9 )
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.121569, 0.0941176, 0.2, 1 )
bbcode_enabled = true
bbcode_text = "So ... they nabbed [i]you[/i] too, huh?"
tab_size = 2
text = "So ... they nabbed you too, huh?"
scroll_active = false
custom_effects = [ SubResource( 7 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prisonerTextTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="delayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="entryWay" type="Area2D" parent="."]
position = Vector2( 120, 40 )

[node name="entryWayCollider" type="CollisionShape2D" parent="entryWay"]
shape = SubResource( 8 )
one_way_collision = true

[node name="exitArea" type="Area2D" parent="."]

[node name="exitCollider" type="CollisionShape2D" parent="exitArea"]
position = Vector2( 120, 8 )
shape = SubResource( 9 )
one_way_collision = true

[node name="door" parent="." instance=ExtResource( 7 )]
position = Vector2( 120, 24 )
[connection signal="timeout" from="prisonerTextTimer" to="." method="_on_textTimer_timeout"]
[connection signal="timeout" from="delayTimer" to="." method="_on_delayTimer_timeout"]
[connection signal="body_entered" from="entryWay" to="." method="_on_entryWay_body_entered"]
[connection signal="body_entered" from="exitArea" to="." method="_on_exitArea_body_entered"]
